# cards

./: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  README.md
BackendClient/include/: CommandLineTest.h
BackendClient/src/: CommandLineTest.cpp
client/: CMakeLists.txt  CardsClient.cpp  CardsClient.h  CardsNode.cpp  CardsNode.h  FindCARDS.cmake
include/: AccessManagerImpl.h  AssetLocatorDatabase.h  AssetLocatorDatabaseImpl.h  AssetLocatorImpl.h  AssetLocatorMemoryImpl.h  AssetLocatorSQLLiteDatabase.h  AssetMetadataMappingDatabase.h  AssetMetadataMappingDatabaseImpl.h  AssetMetadataMappingMemoryImpl.h  AssetMetadataMappingSQLLiteDatabase.h  AssetMetadataMappingSQLLiteDatabasePrepStmts.h  AssetTagImpl.h  DescriptionInterfaceImpl.h  MetadataTagImpl.h  QueryInterfaceImpl.h  RankedSearchImpl.h  SQLLiteDatabasePrepStmts.h
modules/: AccessManager.h  AssetLocator.h  AssetMetadataMapping.h  AssetTag.h  Assets.h  AugmentationLogicHandler.h  DescriptionInterface.h  MetadataTag.h  QueryInterface.h  RankedSearch.h  SearchLogicHandler.h
prototypes/include/: CommandLineTest.h
prototypes/src/: .CommandLineTest.cpp.swp  CommandLineTest.cpp  a.out
sqlite/: Script-Create-Table.sql  Script-Insert-Data.sql  Script-Query-All.sql
sqlite/cpp_prototype/: Makefile  database.cpp  database.h  main.cpp
sqlite/prototype/: Script-Create-Table.sql  Script-Delete-All.sql  Script-Insert-Data.sql  TestCase.sh  hashTagList.txt
src/: AccessManagerImpl.cpp  AssetLocatorDatabaseImpl.cpp  AssetLocatorImpl.cpp  AssetLocatorMemoryImpl.cpp  AssetLocatorSQLLiteDatabase.cpp  AssetMetadataMappingDatabaseImpl.cpp  AssetMetadataMappingMemoryImpl.cpp  AssetMetadataMappingSQLLiteDatabase.cpp  AssetTagImpl.cpp  DescriptionInterfaceImpl.cpp  MetadataTagImpl.cpp  QueryInterfaceImpl.cpp  RankedSearchImpl.cpp
test/: example.cpp  main.cpp  test-accessmanager.hpp  test-assetlocator.hpp  test-assetmetadatamapping.hpp  test-descriptioninterface.hpp  test-queryinterface.hpp  test-rankedsearch.hpp  tests.cpp
test/src/.deps/: collectoroutput.Plo  compileroutput.Plo  htmloutput.Plo  missing.Plo  source.Plo  suite.Plo  textoutput.Plo  time.Plo
