SET(LIB_NAME CardsClient)
SET(PLUGIN_HEADERS
    CardsClient.h
    CardsNode.h    
)

ADD_LIBRARY(${LIB_NAME}
    "SHARED"
    ${PLUGIN_HEADERS}
    CardsClient.cpp
    CardsNode.cpp   
)

FIND_PACKAGE(CARDS REQUIRED)
INCLUDE_DIRECTORIES(${OSG_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${CARDS_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${CARDS_MODULES_DIR})
TARGET_LINK_LIBRARIES(${LIB_NAME} ${OSG_LIBRARIES})
TARGET_LINK_LIBRARIES(${LIB_NAME} ${CARDS_LIBRARY})
TARGET_LINK_LIBRARIES(${LIB_NAME} ${SQLITE_LIBRARY})

ADD_CALVR_LIBRARIES(${LIB_NAME})

INSTALL(TARGETS ${LIB_NAME} DESTINATION lib/plugins)

